--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="C:/gsm/lib/json-20180813.jar"/>
 	<classpathentry kind="lib" path="C:/gsm/workspace/AutoWeb/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/gsm/workspace/AutoWeb/WebContent/WEB-INF/lib/mybatis-3.2.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
